ARROW-6174: [C++] Validate chunks in ChunkedArray::Validate. Fix validation of sliced ListArray, values null checks

* Validate for ListArray was checking the length of the values buffer against the last offset. When we call `Array::Slice`, the child values buffer actually is not modified (maybe it should be?) so this invariant is broken. The main thing that matters is that the values buffer is at least as large as the last offset.
* Changes validation checks to only assert that values buffer (buffer index 1) is non-null when the length is non-zero. I know that the null values buffer is a controversial topic, but we have code throughout that handles this case so I don't know that we can surely say that such arrays are invalid

Otherwise I think that validating chunks in `ChunkedArray::Validate` is a good idea.

Closes #5148 from wesm/ARROW-6174 and squashes the following commits:

c7adbeea9 <Wes McKinney> Validate chunks in ChunkedArray::Validate. Fixes to validation logic

Authored-by: Wes McKinney <wesm+git@apache.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>